--- a/SBM/Admin.Master
+++ b/SBM/Admin.Master
@@ -19,6 +19,10 @@
 		<link rel="alternate" type="application/rss+xml" title="" href="/feed.xml">
 		<link rel="alternate" type="application/atom+xml" title="" href="/atom.xml">
 
+
+        <link rel="stylesheet" href="sweetalert2.css"/>
+    <script src="sweetalert2.all.min.js"></script>
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 
@@ -27,7 +31,7 @@
     <form id="form1" runat="server">
         <div>
                <header role="banner">
-  <h1> <asp:Label ID="LoggedinAdmin" runat="server"></asp:Label></h1>
+  <h2> <asp:Label ID="LoggedinAdmin" runat="server" ></asp:Label></h2>
   <ul class="utilities">
      
     <li class="logout warn">
@@ -40,10 +44,10 @@
         <nav role='navigation'>
   <ul class="main">
     <li class="comments"><a href="Bokningar.aspx">Bokningar</a></li>
-      <li class="users"><a href="AdminManage.aspx">Adminstratörer</a></li>
+      <%--<li class="users"><a href="AdminManage.aspx">Adminstratörer</a></li>
        <li class="dashboard"><a href="Trips.aspx">Resor</a></li>
     <li class="edit"><a href="AddAdmin.aspx">Lägga till Adminstratör</a></li>
-    <li class="write"><a href="AddTrip.aspx">Lägg en resa</a></li>
+    <li class="write"><a href="AddTrip.aspx">Lägg en resa</a></li>--%>
    
 
      
